# My-ResearchBuddy

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  server.py
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: banner.txt  security-audit.sh  sshd_config
.github/: dependabot.yml
static/: app.js  index.html
tests/: test_main.py  test_server.py
