[project]
name = "my-research-agent"
version = "0.1.0"
description = "LangGraph-based multi-step deep research agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "pydantic>=2.8.0",
    "ddgs>=6.0.0",
    "langchain-mistralai>=1.1.4",
]

[dependency-groups]
dev = [
    "pip-audit",
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = false
